gradle_errors.txt
C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\studentexam.java:115: error: cannot find symbol
            View examListView = findViewById(R.id.examRecyclerView);
                                                 ^
  symbol:   variable examRecyclerView
  location: class id
C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\studentprofile.java:107: error: cannot find symbol
        View toolbar = findViewById(R.id.toolbar);
        ^
  symbol:   class View
  location: class studentprofile
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\manageteachers.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  Note: C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\manageteachers.java uses unchecked or unsafe operations.
  Note: Recompile with -Xlint:unchecked for details.
  Note: Recompile with -Xlint:deprecation for details.
  Note: Some input files use or override a deprecated API.
  C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\studentexam.java:115: error: cannot find symbol
              View examListView = findViewById(R.id.examRecyclerView);
                                                   ^
    symbol:   variable examRecyclerView
    location: class id
  C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\studentprofile.java:107: error: cannot find symbol
          View toolbar = findViewById(R.id.toolbar);
          ^
    symbol:   class View
    location: class studentprofile
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 14s
